<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_2"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_job_number"
            style="@style/text_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_number"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/job_number"
            style="@style/text_big"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:text="@string/test_job_number"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_job_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_company"
            style="@style/text_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_4"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_job_number" />


        <TextView
            android:id="@+id/company"
            style="@style/text_normal"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_4"
            android:text="@string/test_company_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_company"
            app:layout_constraintTop_toBottomOf="@id/job_number" />

        <Button
            android:id="@+id/btn_accept"
            style="@style/btn_text"
            android:layout_width="83dp"
            android:layout_height="33dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/btn_accept"
            android:text="@string/button_accept"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_address"
            style="@style/text_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_4"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_company" />

        <TextView
            android:id="@+id/address"
            style="@style/text_normal"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_4"
            android:text="@string/test_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_address"
            app:layout_constraintTop_toBottomOf="@id/company" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>